@@ -59,3 +59,16 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 Changes: Use stl containers for sparsity instead of home-made iterators
 and data structures.
 ---------------------------------------------------------------------------
+DOLFIN version: dolfin 0.4.5 (tis feb  3 12:48:08 CET 2004)
+Compiler flags: -I/usr/local/include -O3
+Elapsed time:   real: 13.186  user: 12.910  sys: 0.270  cpu: 99.96%
+ 
+Linux elrond 2.4.24 #1 ons jan 21 17:07:36 CET 2004 i686 GNU/Linux
+g++ (GCC) 3.3.3 20031206 (prerelease) (Debian)
+Copyright (C) 2003 Free Software Foundation, Inc.
+This is free software; see the source for copying conditions.  There is NO
+warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+
+Changes: Optimize evaluation of Lagrange polynomials and element
+evaluations (use node).
+---------------------------------------------------------------------------
